Polaroids.css
.card{
    display: inline;
    position: absolute;
    top: 200px;
}
/* img{
    display: inline;
    position: relative;
    top: 5px;
    left: 5px;
} */

/* __________________ */
/* TODO: Fix CSS Import */
/* @IMPORT <link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet"> */

* {
  box-sizing: border-box;
}

body {
    padding: 0;
    margin: 0;
    height: 99vh;
    width: 100vw;
  font-family: 'Poor Story', cursive;
  background: #fff;
}
.z-index{
    z-index: 1;
}
.background{
    position: absolute;
    z-index: 0;
    width: 100%;
    height: 100%;
    background-image: url("https://img.rawpixel.com/private/static/images/website/2022-05/upwk62049834-wikimedia-image-job572-1.jpg?w=1200&h=1200&dpr=1&fit=clip&crop=default&fm=jpg&q=75&vib=3&con=3&usm=15&cs=srgb&bg=F4F4F3&ixlib=js-2.2.1&s=26a17e7b89a0875106817f0e366a22db");
    background-size: cover;
    background-position: center center;
    clip-path: polygon(100% 28%, 100% 78%, 0 100%, 0 0);

}

.wrapper {
  width: 100%;
  padding: 0 2rem;
  text-align: center;
}
.polaroid {
    width: 50%;
  background: #fff;
  padding: 1rem;
  box-shadow: 0 0.2rem 1.2rem rgba(0,0,0,0.2);
    /* position: absolute; */
    position: fixed;
}
.polaroid > img{
  max-width: 100%;
  height: auto;
}
.caption {
  font-size: 1.8rem;
  text-align: center;
  padding: 1.5rem;
  /* line-height: 2em; */
}
.item {
    /* Changed width from 30% to 50% */
  width: 50%;
  display: inline-block;
  margin-top: 2rem;
  /* filter: grayscale(100%); */
}
.item .polaroid:before {
  content: '';
  position: absolute;
  z-index: -1;
  transition: all 0.35s;
}

/* .item:hover {
  filter: none;
  transform: scale(1, 1) rotate(0deg) !important;
  transition: all 0.35s;
} */
/* .item:hover .polaroid:before {
  content: '';
  position: absolute;
  z-index: -1;
  transform: rotate(0deg);
  height: 90%;
  width: 90%;
  bottom: 0%;
  right: 5%;
  box-shadow: 0 1rem 3rem rgba(0,0,0,0.2);
  transition: all 0.35s;
} */

